<resources>
    <string name="app_name">JsonPlaceHolderMVVMKotlin</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="street">street</string>
    <string name="suite">suite</string>
    <string name="city">city</string>
    <string name="zipcode">zipcode</string>
    <string name="lat">lat</string>
    <string name="phone">phone</string>
    <string name="website">website</string>
    <string name="catchPhrase">catchPhrase</string>
    <string name="bs">bs</string>
</resources>
