<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/marginSmall"
        android:layout_marginTop="@dimen/marginSmall"

        android:text="@string/street" />


    <TextView
        android:id="@+id/suite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/suite"
        app:layout_constraintLeft_toLeftOf="@+id/street"

        app:layout_constraintTop_toBottomOf="@+id/street" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/city"
        app:layout_constraintLeft_toLeftOf="@+id/suite"

        app:layout_constraintTop_toBottomOf="@+id/suite" />

    <TextView
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/zipcode"
        app:layout_constraintLeft_toLeftOf="@+id/city"

        app:layout_constraintTop_toBottomOf="@+id/city" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="@+id/zipcode"
        app:layout_constraintTop_toBottomOf="@+id/zipcode">

        <include layout="@layout/geo" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>