<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/compagnyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/marginSmall"
        android:layout_marginTop="@dimen/marginSmall"

        android:text="@string/name" />


    <TextView
        android:id="@+id/catchPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/catchPhrase"
        app:layout_constraintLeft_toRightOf="@+id/compagnyname"

        app:layout_constraintTop_toBottomOf="@+id/compagnyname" />


    <TextView
        android:id="@+id/bs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/bs"
        app:layout_constraintLeft_toLeftOf="@+id/catchPhrase"

        app:layout_constraintTop_toBottomOf="@+id/catchPhrase" />
</android.support.constraint.ConstraintLayout>