<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexmasson58.jsonplaceholdermvvmkotlin.view.UserProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/marginSmall"
            android:layout_marginTop="@dimen/marginSmall"

            android:text="@string/id" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/name"
            app:layout_constraintLeft_toRightOf="@+id/userid"

            app:layout_constraintTop_toBottomOf="@+id/userid" />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/username"
            app:layout_constraintLeft_toLeftOf="@+id/name"

            app:layout_constraintTop_toBottomOf="@+id/name" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="@+id/username"

            app:layout_constraintTop_toBottomOf="@+id/username" />

        <LinearLayout
            android:id="@+id/lay_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            app:layout_constraintLeft_toLeftOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <include layout="@layout/address" />
        </LinearLayout>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/phone"
            app:layout_constraintLeft_toLeftOf="@+id/lay_address"

            app:layout_constraintTop_toBottomOf="@+id/lay_address" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/website"
            app:layout_constraintLeft_toLeftOf="@+id/phone"

            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <LinearLayout
            android:id="@+id/lay_compagny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/website">

            <include layout="@layout/compagny" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
